2001-06-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99m-rc1b

	* ntpd/refclock_true.c (true_debug): Bump some buffer sizes to
	reduce/eliminate chance of buffer overflow.  Use snprintf()
	instead of sprintf().  Do a better job of opening the debug file.
	* ntpd/ntp_control.c (ctl_getitem): Count overflow packets as bad
	and return a BADFMT.
	* ntpd/ntp_config.c (save_resolve): call fdopen() with the correct
	mode.
	From: Bela Lubkin <belal@sco.com>

2001-06-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntp.h (RES_ALLFLAGS): Add RES_DEMOBILIZE.
	From: Dean Gibson <timekeeper@tcp-udp.net>

	* configure.in: 4.0.99m-rc1a

2001-06-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_refclock.c (refclock_open): Add O_NOCTTY to the open()
	flags when opening a serial port.
	Reported by: joseph lang <tcnojl1@earthlink.net>

2001-05-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/notes.htm: Typo fix.
	From: John Stone <johns@ks.uiuc.edu>

	* configure.in: 4.0.99m-rc1

	* html/monopt.htm: Typo fix.
	* html/confopt.htm: Cruft removal.
	From: John Stone <johns@ks.uiuc.edu>

2001-05-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* README.cvs: More updates and cleanup.

	* ntpd/ntp_loopfilter.c (loop_config): 
	Check against STA_NANO instead of (NTP_API > 3) to catch kernels
	that were rolled while the spec was evolving.
	From: John.Hay@icomtek.csir.co.za

	* README.cvs: Note that we want to check out NTP into a clean
	subdir.
	Reported by jrd@cc.usu.edu (Joe Doupnik)

2001-05-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k40

	* include/ntp_refclock.h: Median Filter (SAMPLE - macro) - change
	to use most recent MAXSTAGE entries when the filter overflows (ie
	driver poking say once per second with poll > MAXSTAGE) rather
	than blocking after MAXSTAGE entries (turf oldest rather than turf
	most recent).
	From: John Woolner <vk1et@tpg.com.au>

	* ntpd/refclock_true.c:
	   a. Don't cream pp->a_lastcode when we get a <cr><lf> pair 