@@ -1,3 +1,9 @@
+2001-06-10  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpd/ntp_config.c:
+	* include/ntp_config.h: includefile config keyword support
+	From: Dean Gibson <timekeeper@tcp-udp.net>
+
 2001-06-08  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: 4.0.99m-rc1b
